# lazynet

./: .bumpversion.cfg  .gitignore  AUTHORS.rst  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.rst  Cargo.toml  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
benches/: bench_runner.rs
docs/: benchmark-issue.md  conf.py  index.rst  installation.rst  project-analysis-2025-12-17.md  test-analysis-2025-12-17.md  usage.rst
httpstream/: ex_news.py  ex_spark.py  ex_timer.py  httpstream.py  news.jsonl
lazyhttp/: __init__.py  ex_timer.py  lazyhttp.py
lazynet/: __init__.py  ex_timer.py  lazynet.py
scripts/: smoke_test.py
src/: http_client.rs  lib.rs  pipeline.rs
test/: test_httpstream.py
tests/: test_httpstream.py  test_lazyhttp.py  test_lazynet.py  test_perf.py
