[package]
name = "lazynet"
version = "0.5.0"
edition = "2021"

[lib]
name = "_lazynet"
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.5"
pyo3 = { version = "0.20", features = ["extension-module"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
