[package]
name = "lazynet"
version = "0.6.0"
edition = "2021"
autobenches = false

[lib]
name = "_lazynet"
crate-type = ["cdylib", "rlib"]

[dependencies]
crossbeam-channel = "0.5"
pyo3 = { version = "0.24", features = ["extension-module"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

[[bin]]
name = "bench_runner"
path = "benches/bench_runner.rs"
