[tool.poetry]
name = "lazynet"
version = "0.3.0"
description = "Perform lazy-evaluated HTTP requests"
authors = ["Joe Nap"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = "^3.9"
async-timeout = "^4.0"
aiodns = "^3.1"
pycares = "^4.4"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23"
pytest-mock = "^3.12"
pytest-aiohttp = "^1.0"
aioresponses = "^0.7"
coverage = "^7.3"
ipython = "^8"
flake8 = "^6.1"
pytest-runner = "^6.0"
pytest = "^7.4"
tox = "^4.11"
twine = "^4.0"
bump2version = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
