[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "lazynet"
version = "0.5.0"
description = "Perform lazy-evaluated HTTP requests"
authors = [{ name = "Joe Nap" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "pytest-httpserver>=1.0",
    "coverage>=7.3",
    "flake8>=6.1",
    "maturin>=1.4,<2.0",
    "ruff>=0.14.9",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "lazynet._lazynet"

[tool.pytest.ini_options]
testpaths = ["tests"]
