[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "lazynet"
version = "0.6.0"
description = "Lazy-evaluated, asynchronous HTTP requests powered by Rust"
authors = [{ name = "Joe Nap", email = "joenap@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["http", "async", "lazy", "requests", "concurrent", "rust", "pyo3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/joenap/lazynet"
Repository = "https://github.com/joenap/lazynet"
Changelog = "https://github.com/joenap/lazynet/blob/master/CHANGELOG.md"
Issues = "https://github.com/joenap/lazynet/issues"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "pytest-httpserver>=1.0",
    "coverage>=7.3",
    "ruff>=0.14.9",
    "maturin>=1.4,<2.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "lazynet._lazynet"

[tool.pytest.ini_options]
testpaths = ["tests"]
